--- a/style.css
+++ b/style.css
@@ -44,5 +44,25 @@ header a {
     display: none;
 }
 
+#lineOne {
+    display: flex;
+    overflow-x: auto;
+    height: 200px;
+}
+
+#image-container {
+    display: inline-flex;
+}
+
+.card {
+    gap: 20px;
+    width: 301px;
+    height: 164px; 
+    box-shadow: 1px 2px 10px  black; 
+    
+}
 
 
+.ImgCover {
+    border-radius: 7px;
+}
